# phase2-track3-day8-langgraph-agent

./: CLAUDE.md  Makefile  pyproject.toml
configs/: lab.yaml
demo/: index.html  traces.json
docs/superpowers/plans/: 2026-05-11-day08-langgraph-lab.md  2026-05-11-html-demo.md
docs/superpowers/specs/: 2026-05-11-day08-langgraph-lab-design.md  2026-05-11-html-demo-design.md
outputs/: crash_resume_log.txt  graph_diagram.mmd
scripts/: export_traces.py
src/langgraph_agent_lab/: cli.py  nodes.py  persistence.py  report.py
tests/: test_classify.py  test_graph_smoke.py  test_metrics.py  test_persistence.py
